# CosArt---Cosmic-Generative-Art-Studio

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  PR_DESCRIPTION.md  README.md  RELEASE.md  TRAINING_README.md  alembic.ini  demo.py  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: f385cc1b6af7_initial_migration_with_user_.py
api/: __init__.py  cloud_storage.py  main.py  monitoring.py  payment_service.py  payments_routes.py  rate_limiting.py
api/auth/: dependencies.py  routes.py  schemas.py  service.py
api/database/: connection.py  session.py
api/repositories/: user_repository.py
config/: __init__.py  settings.py
cosmic/: __init__.py  presets.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css
inference/: __init__.py  generator.py  universe_builder.py
tests/: __init__.py
utils/: __init__.py  image_processing.py
